--- a/_layout/_footer.scss
+++ b/_layout/_footer.scss
@@ -14,7 +14,7 @@ footer {
         width: 280px;
         margin: 0 auto;
         text-align: center;
-        font-size: 0.8rem;
+        font-size: 0.9rem;
         line-height: 1.3rem;
         color: var(--blanc);
     }
